@@ -8,16 +8,41 @@
     <artifactId>gordian</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
+                    <encoding>utf-8</encoding>
+                    <showDeprecation>true</showDeprecation>
+                    <showWarnings>true</showWarnings>
+
+                    <compilerArgs>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=gordian</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=gordian</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=gordian</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=gordian</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=gordian</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=gordian</arg>
+                    </compilerArgs>
+
+
+
                 </configuration>
             </plugin>
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
@@ -43,6 +68,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
 
         <resources>
@@ -56,15 +82,7 @@
     </build>
 
     <dependencies>
-        <dependency>
-            <groupId>com.sun</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.8</version>
-            <scope>system</scope>
-            <systemPath>${java.home}/../lib/tools.jar</systemPath>
-        </dependency>
 
     </dependencies>
-
 
 </project>
